--- a/.gitlab/ci/deploy.gitlab-ci.yml
+++ b/.gitlab/ci/deploy.gitlab-ci.yml
@@ -3,8 +3,8 @@
   image: gitlab.udevs.io:5050/docker/docker:dind
   script:
     - echo $K8SCONFIGJSON > tmp
-    - yq -P tmp > ~/.kube/config
-    - cat ~/.kube/config && export KUBECONFIG=~/.kube/config
+    - yq -P tmp > /root/.kube/config
+    - cat /root/.kube/config && export KUBECONFIG="/root/.kube/config"
     - DEPLOYMENT=$(echo $CI_PROJECT_NAME | sed s/_/-/g | sed s/$CI_PROJECT_NAMESPACE-//g)
     - echo $DEPLOYMENT
     - helm repo add --username $HELM_REGISTRY_USERNAME --password $HELM_REGISTRY_PASSWORD $HELM_REPO_NAME $HELM_REGISTRY_PATH
