--- a/.gitlab/ci/deploy.gitlab-ci.yml
+++ b/.gitlab/ci/deploy.gitlab-ci.yml
@@ -5,6 +5,7 @@
     - echo $K8SCONFIGJSON > tmp
     - yq -P tmp > /root/.kube/config
     - cat /root/.kube/config && export KUBECONFIG="/root/.kube/config"
+    - chmod 600 /root/.kube/config
     - DEPLOYMENT=$(echo $CI_PROJECT_NAME | sed s/_/-/g | sed s/$CI_PROJECT_NAMESPACE-//g)
     # - echo $DEPLOYMENT
     # - kubectl config view
