--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ include:
 
 stages:
   - build
+  # - migrate
   - deploy
   - rollback
 
@@ -13,6 +14,15 @@ build-staging:
     ENV_TAG: test
   only:
     - staging
+
+# migrate-staging:
+#   stage: migrate
+#   extends: .migrate_template
+#   variables:
+#     PATH_MIGRATION: migrations/postgres
+#     POSTGRES_LINK: $UCODE_ADMIN_API_TESTDB
+#   only:
+#     - staging
 
 deploy-staging:
   stage: deploy
