--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ include:
 
 stages:
   - build
-  # - migrate
   - deploy
   - rollback
 
@@ -11,18 +10,10 @@ build-staging:
   stage: build
   extends: .build_template
   variables:
+    DOCKERFILE: Dockerfile
     ENV_TAG: test
   only:
     - staging
-
-# migrate-staging:
-#   stage: migrate
-#   extends: .migrate_template
-#   variables:
-#     PATH_MIGRATION: migrations/postgres
-#     POSTGRES_LINK: $UCODE_ADMIN_API_TESTDB
-#   only:
-#     - staging
 
 deploy-staging:
   stage: deploy
@@ -30,6 +21,16 @@ deploy-staging:
   variables:
     NAMESPACE: test
     VALUES_FILE: .helm/values-test.yml
+    K8SCONFIGJSON: $UCODE_KUBECONFIG
+  only:
+    - staging
+
+deploy-demo:
+  stage: deploy
+  extends: .deploy_template
+  variables:
+    NAMESPACE: ucode-demo
+    VALUES_FILE: .helm/values-demo.yml
     K8SCONFIGJSON: $UCODE_KUBECONFIG
   only:
     - staging
