--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ include:
 
 stages:
   - build
+  - migrate
   - deploy
   - rollback
 
@@ -12,6 +13,24 @@ build-staging:
   variables:
     DOCKERFILE: Dockerfile
     ENV_TAG: test
+  only:
+    - staging
+
+migrate-staging:
+  stage: migrate
+  extends: .migrate_template
+  variables:
+    PATH_MIGRATION: migrations/postgres
+    POSTGRES_LINK: $UCODE_ADMIN_API_TESTDB
+  only:
+    - staging
+
+migrate-demo:
+  stage: migrate
+  extends: .migrate_template
+  variables:
+    PATH_MIGRATION: migrations/postgres
+    POSTGRES_LINK: $UCODE_ADMIN_API_DEMODB
   only:
     - staging
 
