fix .helm && ci/cd && Makefile && Dockerfile

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,16 @@ build-staging:
   only:
     - staging
 
+build-prod:
+  stage: build
+  extends: .build_template
+  variables:
+    ENV_TAG: latest
+    DOCKERFILE: Dockerfile
+  only:
+    - master
+
+
 migrate-staging:
   stage: migrate
   extends: .migrate_template
@@ -24,6 +34,15 @@ migrate-staging:
     POSTGRES_LINK: $UCODE_ADMIN_API_TESTDB
   only:
     - staging
+
+migrate-prod:
+  stage: migrate
+  extends: .migrate_template
+  variables:
+    PATH_MIGRATION: migrations/postgres
+    POSTGRES_LINK: $UCODE_ADMIN_API_TESTDB
+  only:
+    - master
 
 # migrate-demo:
 #   stage: migrate
@@ -54,6 +73,16 @@ deploy-staging:
 #   only:
 #     - staging
 
+deploy-prod:
+  stage: deploy
+  extends: .deploy_template
+  variables:
+    NAMESPACE: ucode-prod
+    VALUES_FILE: .helm/values-prod.yml
+    K8SCONFIGJSON: $UCODE_KUBECONFIG
+  only:
+    - master
+
 rollback-staging:
   stage: rollback
   extends: .rollback_template
@@ -61,3 +90,12 @@ rollback-staging:
     NAMESPACE: test
     K8SCONFIGJSON: $UCODE_KUBECONFIG
   when: manual
+
+rollback-prod:
+  stage: rollback
+  extends: .rollback_template
+  variables:
+    NAMESPACE: ucode-prod
+    K8SCONFIGJSON: $UCODE_KUBECONFIG
+  when: manual
+
