--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -95,6 +95,7 @@ volumes:
     enable: true
     name: code-server
     path: /functions
+    mountPath: /functions
     type: Directory
   pvc:
     enabled: false
