--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -107,7 +107,7 @@ volumes:
     accessModes:
       - ReadWriteMany
   configMaps:
-    name: config
+    name: code-server-kubeconfig
     mountPath: /kubeconfig
 
 service:
