--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -183,7 +183,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: kubernetes.io/env-test
+            - key: kubernetes.io/ucode-prod
               operator: In
               values:
                 - "true"
