--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -108,10 +108,10 @@ volumes:
     accessModes:
       - ReadWriteMany
   configMaps:
-    - name: code-server-kubeconfig
-      mountPath: /kubeconfig
-    - name: private-key
-      mountPath: /key
+  - name: code-server-kubeconfig
+    mountPath: /kubeconfig
+  # - name: private-key
+  #   mountPath: /key
 
 service:
   type: ClusterIP
