--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -110,8 +110,8 @@ volumes:
   configMaps:
   - name: code-server-kubeconfig
     mountPath: /kubeconfig
-  # - name: private-key
-  #   mountPath: /key
+  - name: private-key
+    mountPath: /key
 
 service:
   type: ClusterIP
