--- a/.helm/values-prod.yml
+++ b/.helm/values-prod.yml
@@ -60,7 +60,11 @@ podAnnotations:
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-
+    {{- with secret "secret/data/k8s/ucode-prod/gitlab" -}}
+    {{- range $key, $value := .Data.data }}
+    {{ $key }}: {{ $value }}
+    {{- end }}
+    {{ end -}}
 podLabels:
   app: ucode-go-admin-api-gateway
 
