--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -188,7 +188,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: kubernetes.io/env-test
+            - key: kubernetes.io/code-server
               operator: In
               values:
                 - "true"
