--- a/.helm/values-prod.yml
+++ b/.helm/values-prod.yml
@@ -40,6 +40,11 @@ podAnnotations:
   vault.hashicorp.com/secret-volume-path-.env: "/app"
   vault.hashicorp.com/role: "ucode-prod"
   vault.hashicorp.com/agent-inject-template-.env: |
+    {{- with secret "secret/data/k8s/ucode-prod/redis" -}}
+    {{- range $key, $value := .Data.data }}
+    {{ $key }}: {{ $value }}
+    {{- end }}
+    {{ end -}}
     {{- with secret "secret/data/k8s/ucode-prod/minio" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
