--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -193,7 +193,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: kubernetes.io/code-server
+            - key: kubernetes.io/env-test
               operator: In
               values:
                 - "true"
