--- a/.helm/values-dev.yml
+++ b/.helm/values-dev.yml
@@ -40,11 +40,11 @@ podAnnotations:
   vault.hashicorp.com/secret-volume-path-.env: "/app"
   vault.hashicorp.com/role: "ucode-dev"
   vault.hashicorp.com/agent-inject-template-.env: |
-    {{- with secret "secret/data/k8s/ucode-dev/minio" -}}
-    {{- range $key, $value := .Data.data }}
-    {{ $key }}: {{ $value }}
-    {{- end }}
-    {{ end -}}
+#    {{- with secret "secret/data/k8s/ucode-dev/minio" -}}
+#    {{- range $key, $value := .Data.data }}
+#    {{ $key }}: {{ $value }}
+#    {{- end }}
+#    {{ end -}}
     {{- with secret "secret/data/k8s/ucode-dev/services" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
