--- a/.helm/values-dev.yml
+++ b/.helm/values-dev.yml
@@ -7,7 +7,7 @@ global:
   # list of key: value
   # GLOBAL1: value
 labels:
-  app: go-admin-api-gateway
+  app: ucode-go-admin-api-gateway
 replicaCount: 1
 
 image:
@@ -15,7 +15,7 @@ image:
   repository: /ucode/ucode_go_admin_api_gateway
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "dev"
+  tag: "test"
 
 imagePullSecrets: "gitlab-registry"
 nameOverride: ""
@@ -45,11 +45,6 @@ podAnnotations:
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-#    {{- with secret "secret/data/k8s/ucode-dev/postgres" -}}
-#    {{- range $key, $value := .Data.data }}
-#    {{ $key }}: {{ $value }}
-#    {{- end }}
-#    {{ end -}}
     {{- with secret "secret/data/k8s/ucode-dev/go-admin-api-gateway" -}}
     {{- range $key, $value := .Data.data }}
     {{ $key }}: {{ $value }}
@@ -57,7 +52,7 @@ podAnnotations:
     {{ end -}}
 
 podLabels:
-  app: go-admin-api-gateway
+  app: ucode-go-admin-api-gateway
 
 podSecurityContext:
   {}
@@ -78,18 +73,33 @@ vault:
     VAULT_TOKEN: vault_token
     SECRETS_PATH: vault_path
 
-environment: {}
+environment:
+  KUBECONFIG: /kubeconfig/config
+  GIT_SSH_COMMAND: "ssh -i /key/ssh-privatekey -o IdentitiesOnly=yes -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
 volumes:
-  enabled: false
+  enabled: true
+  hostpath:
+    enabled: true
+    name: code-server
+    path: /functions
+    mountPath: /functions
+    type: Directory
   pvc:
     enabled: false
     existing_claim:
     name: pvc
-    mountPath: /pv
+    mountPath: /functions
     size: 1G
     class:
     accessModes:
-      - ReadWriteOnce
+      - ReadWriteMany
+  configMaps:
+    - name: code-server-kubeconfig
+      mountPath: /kubeconfig
+  secrets:
+    - name: ssh-key-secret
+      mountPath: /key
+      defaultMode: 256
 
 service:
   type: ClusterIP
@@ -103,22 +113,41 @@ ingress:
   enabled: true
   rules:
     - annotations:
+        nginx.ingress.kubernetes.io/proxy-body-size: "0"
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+        nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+        kubernetes.io/ingress.class: nginx
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+      type: web
+      hosts:
+        - host: "dev.admin.api.ucode.run"
+          path: /
+          servicePort: 8080
+      tls:
+        - secretName: admin-api-tls
+          hosts:
+            - "dev.admin.api.ucode.run"
+    - annotations:
+        # type of authentication
         nginx.ingress.kubernetes.io/auth-type: basic
+        # name of the secret that contains the user/password definitions
         nginx.ingress.kubernetes.io/auth-secret: basic-auth
+        # message to display with an appropriate context why the authentication is required
         nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - u-code"
         nginx.ingress.kubernetes.io/proxy-body-size: "0"
         nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
         kubernetes.io/ingress.class: nginx
+        cert-manager.io/cluster-issuer: letsencrypt-prod
       type: auth
       hosts:
-        - host: "dev-admin-api.ucode.run"
+        - host: "dev.admin.api.ucode.run"
           path: /swagger
           servicePort: 8080
       tls:
-        - secretName: admin-dev-api-tls
+        - secretName: admin-api-dev-tls
           hosts:
-            - "dev-admin-api.ucode.run"
+            - "dev.admin.api.ucode.run"
 
 # resources:
 #    limits:
