--- a/.helm/values-dev.yml
+++ b/.helm/values-dev.yml
@@ -171,7 +171,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: kubernetes.io/ucode-dev
+            - key: kubernetes.io/code-server
               operator: In
               values:
                 - "true"
