--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,8 @@ deploy-dev:
     NAMESPACE: ucode-dev
     VALUES_FILE: .helm/values-dev.yml
     K8SCONFIGJSON: $UCODE_HZN_KUBECONFIG
+  only: 
+    - dev
 
 # deploy-demo:
 #   stage: deploy
