--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -137,16 +137,15 @@ ingress:
         nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
         kubernetes.io/ingress.class: nginx
-        cert-manager.io/cluster-issuer: letsencrypt-prod
       type: web
       hosts:
-        - host: "test.admin.api.u-code.io"
+        - host: "admin-api.ucode.run"
           path: /
           servicePort: 8080
       tls:
         - secretName: admin-api-tls
           hosts:
-            - "test.admin.api.u-code.io"
+            - "admin-api.ucode.run"
     - annotations:
         # type of authentication
         nginx.ingress.kubernetes.io/auth-type: basic
@@ -158,16 +157,15 @@ ingress:
         nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
         nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
         kubernetes.io/ingress.class: nginx
-        cert-manager.io/cluster-issuer: letsencrypt-prod
       type: auth
       hosts:
-        - host: "test.admin.api.u-code.io"
+        - host: "admin-api.ucode.run"
           path: /swagger
           servicePort: 8080
       tls:
         - secretName: admin-api-tls
           hosts:
-            - "test.admin.api.u-code.io"
+            - "admin-api.ucode.run"
 
 # resources:
 #    limits:
