--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -143,7 +143,7 @@ ingress:
           path: /
           servicePort: 8080
       tls:
-        - secretName: ucode-star-tls
+        - secretName: ucode-star
           hosts:
             - "admin-api.ucode.run"
     - annotations:
@@ -163,7 +163,7 @@ ingress:
           path: /swagger
           servicePort: 8080
       tls:
-        - secretName: ucode-star-tls
+        - secretName: ucode-star
           hosts:
             - "admin-api.ucode.run"
 
