--- a/.helm/values-dev.yml
+++ b/.helm/values-dev.yml
@@ -50,7 +50,11 @@ podAnnotations:
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
-
+    {{- with secret "secret/data/k8s/ucode-dev/minio" -}}
+    {{- range $key, $value := .Data.data }}
+    {{ $key }}: {{ $value }}
+    {{- end }}
+    {{ end -}}
 podLabels:
   app: ucode-go-admin-api-gateway
 
