--- a/.helm/values-dev.yml
+++ b/.helm/values-dev.yml
@@ -55,6 +55,12 @@ podAnnotations:
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
+    {{- with secret "secret/data/k8s/ucode-dev/gitlab" -}}
+    {{- range $key, $value := .Data.data }}
+    {{ $key }}: {{ $value }}
+    {{- end }}
+    {{ end -}}
+
 podLabels:
   app: ucode-go-admin-api-gateway
 
