--- a/.helm/values-prod.yml
+++ b/.helm/values-prod.yml
@@ -129,6 +129,10 @@ service:
       targetPort: 8080
       name: http
 
+    - port: 80
+      targetPort: 80
+      name: grpc
+
 ingress:
   enabled: true
   rules:
