--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -152,10 +152,10 @@ ingress:
         - host: "admin-api.ucode.run"
           path: /
           servicePort: 8080
-      tls:
-        - secretName: ucode-star
-          hosts:
-            - "admin-api.ucode.run"
+      # tls:
+      #   - secretName: ucode-star
+      #     hosts:
+      #       - "admin-api.ucode.run"
     - annotations:
         # type of authentication
         nginx.ingress.kubernetes.io/auth-type: basic
@@ -172,10 +172,10 @@ ingress:
         - host: "admin-api.ucode.run"
           path: /swagger
           servicePort: 8080
-      tls:
-        - secretName: ucode-star
-          hosts:
-            - "admin-api.ucode.run"
+      # tls:
+      #   - secretName: ucode-star
+      #     hosts:
+      #       - "admin-api.ucode.run"
 
 # resources:
 #    limits:
