--- a/.helm/values-prod.yml
+++ b/.helm/values-prod.yml
@@ -205,7 +205,7 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
-            - key: kubernetes.io/ucode-prod
+            - key: workload
               operator: In
               values:
-                - "true"
+                - "ucode-prod"
