--- a/.helm/values-test.yml
+++ b/.helm/values-test.yml
@@ -80,6 +80,11 @@ podAnnotations:
     {{ $key }}: {{ $value }}
     {{- end }}
     {{ end -}}
+    {{- with secret "secret/data/k8s/ucode-test/jaeger" -}}
+    {{- range $key, $value := .Data.data }}
+    {{ $key }}: {{ $value }}
+    {{- end }}
+    {{ end -}}
 
 podLabels:
   app: ucode-go-admin-api-gateway
